--- a/app/src/main/res/layout/cashpager_view.xml
+++ b/app/src/main/res/layout/cashpager_view.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="98dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="0dp"
         android:id="@+id/currency"
         android:contentDescription="@string/cash_image" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:background="@drawable/cash_pager_border"
+        android:id="@+id/currencyText"
+        android:text="@string/hello"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        />
+
+</LinearLayout>
