--- a/app/src/main/res/layout/keyboard_layout.xml
+++ b/app/src/main/res/layout/keyboard_layout.xml
@@ -23,7 +23,7 @@
         <ImageButton
             android:id="@+id/btnAccept"
             android:src="@drawable/ic_accept"
-            android:background="@color/green"
+            android:background="@color/lightGrey"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="0.5"
