--- a/app/src/main/res/layout/cashpager_view.xml
+++ b/app/src/main/res/layout/cashpager_view.xml
@@ -15,6 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="22dp"
+        android:gravity="bottom"
         android:background="@drawable/cash_pager_border"
         android:id="@+id/currencyText"
         android:text="@string/hello"
