--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/title_text"
             android:layout_width="match_parent"
@@ -20,33 +21,78 @@
             android:textAlignment="center"
             android:text="@string/cash_keyboard"/>
 
-        <TextView
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Test out the Cash Keyboards"/>
+            android:layout_height="wrap_content">
+            <TableRow>
+                <EditText
+                    android:id="@+id/participant_id"
+                    android:layout_weight="2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Participant ID"/>
+
+                <Button
+                    android:id="@+id/save_participant_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/save"/>
+            </TableRow>
+        </TableLayout>
 
         <EditText
             android:id="@+id/test1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Test out the Cash Keyboards"/>
+            android:hint="@string/task_1"/>
+        <Button
+            android:id="@+id/save_results_task_1"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/submit_task_1" />
+
 
         <EditText
             android:id="@+id/test2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="@string/task_2"/>
 
         <Button
-            android:id="@+id/send_results"
+            android:id="@+id/save_results_task_2"
             android:textAlignment="center"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/results_send"/>
+            android:layout_gravity="right"
+            android:text="@string/submit_task_2" />
+
+        <EditText
+            android:id="@+id/test3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/task_3"/>
+
+        <Button
+            android:id="@+id/save_results_task_3"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/submit_task_3" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/reset"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/reset"
+                android:layout_alignParentLeft="true"/>
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
