--- a/app/src/main/res/layout/keyboard_layout.xml
+++ b/app/src/main/res/layout/keyboard_layout.xml
@@ -60,7 +60,7 @@
             android:id="@+id/btnClear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="0.25"
+            android:alpha="0.75"
             android:layout_gravity="bottom|right"
             android:src="@drawable/ic_delete"/>
         <ImageView
@@ -70,20 +70,29 @@
             android:layout_width="100dp"
             android:layout_height="70dp" />
     </FrameLayout>
-
-    <com.sighs.imputmethod.CashPager.PagerContainer
-        android:id="@+id/pager_container"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white">
+        <com.sighs.imputmethod.CashPager.PagerContainer
+            android:id="@+id/pager_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
 
-        <android.support.v4.view.ViewPager
-            android:layout_width="200dp"
-            android:id="@+id/pagerView"
-            android:layout_gravity="center"
-            android:background="@color/white"
-            android:layout_height="120dp" />
-    </com.sighs.imputmethod.CashPager.PagerContainer>
+            <android.support.v4.view.ViewPager
+                android:layout_width="200dp"
+                android:id="@+id/pagerView"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:layout_height="120dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="22dp"
+                android:background="@drawable/cash_pager_border"
+                android:layout_gravity="bottom"/>
+        </com.sighs.imputmethod.CashPager.PagerContainer>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
