--- a/app/src/main/res/layout/keyboard_layout.xml
+++ b/app/src/main/res/layout/keyboard_layout.xml
@@ -48,7 +48,8 @@
             android:id="@+id/horizontalScroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:fillViewport="true"
+            android:fadeScrollbars="false">
             <TableLayout
                 android:id="@+id/cashTable"
                 android:layout_width="wrap_content"
